# cpp-coding-standard

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
.formatting/Google/: .clang-format
.formatting/LLVM/: .clang-format
.formatting/Mozilla/: .clang-format
.formatting/Webkit/: .clang-format
western/: cowboy.cpp  cowboy.hpp
